<resources>
    <string name="app_name">ToDo</string>

    <!--  Menu Title  -->
    <string name="add_category">Add Category</string>
    <string name="add_task">Add Task</string>
    <string name="remove_category">Remove Category</string>

    <!--  Text View  -->
    <string name="new_category">New Category</string>
    <string name="new_task">New Task</string>
    <string name="priority">Priority</string>
    <string name="categories_to_be_removed">Categories to be removed</string>

    <!--  Button  -->
    <string name="confirm">Confirm</string>
    <string name="set_due_date">Set Due Date</string>
    <string name="rememberMe">Remember Me</string>
    <string name="remove">Remove</string>

    <!--  Hint  -->
    <string name="category_name">category name</string>
    <string name="task_name">task name</string>

</resources>
