<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="#EEF5DB" android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task"
        android:id="@+id/txtNewTask"
        android:textSize="14pt"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTaskName"
        android:layout_below="@+id/txtNewTask"
        android:layout_alignParentStart="true"
        android:hint="@string/task_name"
        android:textStyle="italic"
        android:layout_marginTop="53dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPriority"
        android:text="@string/priority"
        android:textSize="11pt"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/etTaskName"
        android:layout_marginTop="40dp"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prioritySeekBar"
        android:layout_below="@+id/txtPriority"
        android:layout_marginTop="4dp"
        android:max="5"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNumPriority"
        android:layout_below="@+id/prioritySeekBar"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_due_date"
        android:id="@+id/btSetDueDate"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txtNumPriority" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/btConfirmNewTask"
        android:layout_below="@+id/btSetDueDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />


</RelativeLayout>