<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_category"
        android:id="@+id/txtNewCategory"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:textSize="14pt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCategoryName"
        android:layout_below="@+id/txtNewCategory"
        android:layout_marginTop="80dp"
        android:hint="@string/category_name"
        android:textStyle="italic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/btConfirm"
        android:layout_below="@+id/etCategoryName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp" />
</RelativeLayout>